# thesis

./: .gitignore  0.dataset.ipynb  1.mediapipe.ipynb  2.islr.ipynb  2.model.ipynb  CLAUDE.md  README.md  TODO.md  kaggle_token.ps1  pyproject.toml  pyrefly.toml  run_extraction.py
docs/: 2026-07-17.md
docs/logs/weekly/: 2026-30.md
docs/reports/: motion-energy.md  subset-comparison.md
modules/: dataset.py  landmark_worker.py
notebooks/gislr/: 0.islr.ipynb
scripts/: build_model_index.py  eval_gru.py
src/: gislr.0.dataset.motion-energy.ipynb  gislr.0.dataset.subset-comparison.ipynb  gislr.1.model.bilstm.ipynb  gislr.1.model.cnn1d.ipynb  gislr.1.model.gru.ipynb  gislr.1.model.lstm.ipynb  popsign.0.dataset.extraction.ipynb  popsign.1.mediapipe.ipynb  popsign.2.model.ipynb
src/models/: README.md  index.csv
src/models/gislr/gru/20260713-213000/: metadata.json
src/models/gislr/gru/20260715-190729/: metadata.json
src/models/gislr/gru/20260716-213901/: README.md  data.md  metadata.json
src/models/gislr/gru/20260716-213901/cache/: hyp.json
src/models/gislr/gru/20260716-215522/: README.md  data.md  metadata.json
src/models/gislr/gru/20260716-215522/cache/: hyp.json
src/models/gislr/gru/20260716-221157/: README.md  data.md  metadata.json
src/models/gislr/gru/20260716-221157/cache/: hyp.json
src/modules/: paths.py
src/modules/dataset/landmark/: extraction.py  subsets.py
src/modules/scripts/: build_model_index.py  eval_gru.py
