[project]
    name = "sign2speech"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    requires-python = ">=3.12"
    dependencies = [
        "dask[complete]>=2026.7.0",
        "duckdb>=1.5.4",
        "jupyter>=1.1.1",
        "kagglehub>=1.0.2",
        "matplotlib>=3.11.0",
        "mediapipe>=0.10.35",
        "numpy>=2.5.1",
        "opencv-python>=5.0.0.93",
        "pandas>=3.0.3",
        "pyarrow>=24.0.0",
        "pyrefly>=1.1.1",
        "scikit-learn>=1.9.0",
        "seaborn>=0.13.2",
        "tensorflow>=2.21.0",
        # "torch>=2.12.1",
        # "torchvision>=0.27.1",
    ]

[dependency-groups]
    dev = ["types-tqdm>=4.68.0.20260608"]


[[tool.uv.index]]
    name     = "pytorch-cuda"
    url      = "https://download.pytorch.org/whl/cu130"
    explicit = true

[dependencies]
    torch       = { index = "pytorch-cuda" }
    torchvision = { index = "pytorch-cuda" }
    torchaudio  = { index = "pytorch-cuda" }
